Day_003_Homework_part2
Day_003_Homework_part2

--- a/homework/Day_003-1_HW.ipynb
+++ b/homework/Day_003-1_HW.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,35 +29,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>人口(百萬)</th>\n",
+       "      <th>國家</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>278</td>\n",
+       "      <td>Taiwan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>233</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>168</td>\n",
+       "      <td>Thailand</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   人口(百萬)             國家\n",
+       "0     278         Taiwan\n",
+       "1     233  United States\n",
+       "2     168       Thailand"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = {'國家': ['Taiwan', 'United States', 'Thailand'] ,\n",
-    "        '人口': [random.randint(100, 300), random.randint(100, 300), random.randint(100, 300)] }\n",
-    "data = pd.DataFrame(data)"
+    "        '人口(百萬)': [random.randint(100, 300), random.randint(100, 300), random.randint(100, 300)] }\n",
+    "data = pd.DataFrame(data)\n",
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    人口             國家\n",
-      "0  175         Taiwan\n",
-      "1  174  United States\n",
-      "2  245       Thailand\n"
-     ]
+     "data": {
+      "text/plain": [
+       "人口(百萬)       278\n",
+       "國家        Taiwan\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(data)"
+    "data.loc[data[\"人口(百萬)\"].idxmax()]"
    ]
   },
   {
